# datastream-platform

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  databricks.yml  pyproject.toml
.cursor/rules/: code-quality-rules.mdc  cursor-rules-location.mdc  data-engineering-rules.mdc  data-platform-principles.mdc  databricks-cli.mdc  fasthtml.mdc  htmx.mdc  llm-ai-rules.mdc  local-developer-assistant.mdc  testing-standards-rules.mdc  typing-conventions.mdc  ui.mdc
.github/workflows/: dabs.yml  databricks_deploy.yml  deploy.yml  pr.yml  pre_lint_format.yml
.github/workflows/dabs/: prod.yml  qa.yml  test.yml
.github/workflows/dabs/templates/: deploy.yml
.github/workflows/templates/: dabs.yml
.ruler/: always_apply_instructions.md  databricks_cli.md  mcp.json  project_architecture.md  python_guidelines.md  ruler.toml  transformations-yml.md
apps/evalgen_app/: pyproject.toml
apps/evalgen_app/dataplatform/evalgen_app/: db.py  main.py
apps/evalgen_app/dataplatform/evalgen_app/ref_docs/: annotation.md  htmx.md  monsterui_api.md  ui_cards.md  ui_tables.md
apps/evalgen_app/tests/: test_evalgen_app_comprehensive.py  test_evalgen_app_import.py
apps/unity_orm/: README.md  pyproject.toml
apps/unity_orm/src/unity_orm/: __init__.py  databricks_session.py  engine.py  logger.py  model_base.py
apps/unity_orm/src/unity_orm/cli/: __init__.py  __main__.py  main.py
apps/unity_orm/src/unity_orm/cli/commands/: __init__.py  interactive_commands.py  model_commands.py  project_commands.py
apps/unity_orm/src/unity_orm/generators/: __init__.py  model_generator.py  model_generator.py.bak
apps/unity_orm/src/unity_orm/generators/models/: __init__.py  catalog_schema.py  directory_structure.py  file_splitter.py  generator.py  table_info.py
dab_templates/data_engineering/template/{{template `root_dir` .}}/: databricks.yml.tmpl  pyproject.toml.tmpl
dab_templates/github_workflows/: databricks_template_schema.json
dab_templates/github_workflows/template/: {{template `root_dir` .}}.yml.tmpl
dab_templates/ml_engineering/: databricks_template_schema.json
dab_templates/ml_engineering/template/: run_validations.tmpl  update_layout.tmpl
dab_templates/ml_engineering/template/{{template `root_dir` .}}/: databricks.yml.tmpl  pyproject.toml.tmpl
dab_templates/ml_engineering/tests/: example_config.json
docs/: platform_standards.md
libs/evalgen/: .sesskey  README.md  pyproject.toml
libs/evalgen/dataplatform/evalgen/: evalgen_prompt.py  scores.py  test.py  test_cases.py
libs/evalgen/dataplatform/evalgen/databricks_integration/: __init__.py  db.py  dp_models.py  label.py  llms.py
libs/evalgen/dataplatform/evalgen/evalgen_app/: databricks_util.py  main.py
libs/evalgen/dataplatform/evalgen/evalgen_app/ref_docs/: monsterui-llms-ctx.txt  ui_forms.md
libs/evalgen/dataplatform/evalgen/marimo_notebooks/: 01_testcase.py
libs/evalgen/tests/: test_evalgen_prompt.py  test_scores.py  test_test_cases.py
libs/interfaces/: pyproject.toml
libs/interfaces/dataplatform/interfaces/: __init__.py
libs/unity_catalog/: pyproject.toml
libs/unity_catalog/dataplatform/unity_catalog/databricks/: __init__.py  deltalake.py  spark.py  table.py  table_metadata.py
libs/unity_catalog/dataplatform/unity_catalog/databricks/sql_engine/: __init__.py
libs/unity_catalog/dataplatform/unity_catalog/databricks/tests/: pytest_databricks.py  test_table.py
libs/unity_catalog/tests/: __init__.py  test_tables.py
mcp-databricks-server/: databricks_formatter.py  databricks_sdk_utils.py  engine.py  main.py  test_sqlalchemy_engine.py
platform/: cursor_rules_eval.py
platform/uc_models/: Dockerfile  pyproject.toml
projects/llm_eval/cursor_eval/: databricks.yml  pyproject.toml  pytest.ini
projects/llm_eval/cursor_eval/dataplatform/cursor_eval/: __init__.py  agent.py  eval_runner.py  scorers.py  test_cases.py
projects/llm_eval/cursor_eval/dataplatform/prompts/: ask_confirmation_first.md  collaborative_with_references.md  data_platform_best_practices.md  no_emojis_unless_asked.md
projects/llm_eval/cursor_eval/explore/: README.md
projects/llm_eval/cursor_eval/resources/: cursor_eval_job.yml
resources/: __init__.py  datastream_job.py  datastream_pipeline.py
scripts/: pytest_databricks_runner.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/databricks/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/databricks/catalog/: README.md  aws-metastore.tf  azure-metastore.tf  catalogs.tf  permissions.tf
terraform/modules/databricks/identity/: README.md  groups.tf  service-principals.tf  users.tf
typings/dataplatform/: evalgen_prompt.pyi  main.pyi
typings/dataplatform/databricks_integration/: __init__.pyi  db.pyi  dp_models.pyi
typings/delta/: __init__.pyi  _typing.pyi  pip_utils.pyi  tables.pyi
typings/delta/connect/: _typing.pyi  plan.pyi  tables.pyi
typings/delta/connect/proto/: __init__.pyi  relations_pb2.pyi
typings/delta/exceptions/: __init__.pyi  base.pyi
typings/fastcore/: all.pyi  basics.pyi  docments.pyi  docscrape.pyi  foundation.pyi  imghdr.pyi  imports.pyi  meta.pyi  net.pyi  parallel.pyi  script.pyi  style.pyi  test.pyi  utils.pyi  xml.pyi  xtras.pyi
typings/fastsql/: __init__.pyi  _modidx.pyi  core.pyi
typings/pandas/: conftest.pyi
typings/pandas/core/: algorithms.pyi  base.pyi  construction.pyi  frame.pyi  generic.pyi  indexing.pyi  missing.pyi  nanops.pyi  series.pyi
typings/pandas/core/_numba/: executor.pyi
typings/pandas/core/arrays/: datetimelike.pyi  datetimes.pyi  masked.pyi  period.pyi  string_.pyi  timedeltas.pyi
typings/pandas/core/computation/: align.pyi  expr.pyi  ops.pyi  pytables.pyi
typings/pandas/core/dtypes/: cast.pyi  missing.pyi
typings/pandas/core/indexes/: base.pyi  datetimes.pyi  multi.pyi
typings/pandas/core/internals/: managers.pyi
typings/pandas/core/ops/: array_ops.pyi  mask_ops.pyi
typings/pandas/core/reshape/: reshape.pyi
typings/pandas/io/: pytables.pyi  sql.pyi
typings/pandas/tseries/: holiday.pyi
(+44 files in other folders)
