[project]
name = "datastream-platform"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []


[tool.una]
namespace = "dataplatform"

[tool.uv.workspace]
members = ["projects/*", "packages/*", "platform/*"]

[tool.dependency-groups]
dev = [
    "transformation",
    "client",
    "core",
    "ruff==0.12.7",
    "polars~=1.12.0",
    "pre-commit~=4.0.1",
    "pyright>=1.1.391",
    "una~=0.6.5",
    "ipykernel>=6.29.5",
    "databricks-connect~=16.4.1",
    "nbformat>=5.10.4",
    "jupytext>=1.16.1",
    "pytest>=8.3.5",
    "pip==24.3.1",
    "marimo>=0.15.0",
    "mohtml>=0.1.11",
    "molabel>=0.1.1",
    "alembic>=1.15.2",
    "databricks-sqlalchemy>=2.0.7",
    "sqlmodel>=0.0.24",
    "sqlacodegen>=3.0.0",
    "python-dotenv>=1.1.1",
    "boto3>=1.40.20",
    "databricks-labs-dqx>=0.9.2",
    "pricing",
    "uv>=0.8.15",
]
[tool.pytest.ini_options]
pythonpath = ["packages/*", "projects/*"]
testpaths = ["packages/*", "projects/*"]
addopts = ""

[tool.ruff]
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb",
    "typings/*",
    "__builtins__.pyi",
    "*.ipynb",
    "*.ipynb_checkpoints",
    "projects/*/explore/**/*",
    "projects/*/scratch/**/*",
    "notebooks/*",
]
fix = true
show-fixes = true
line-length = 88
indent-width = 4


[tool.pyright]
allowedUntypedLibraries = ["fastcore", "pyspark", "mlflow"]
analyzeUnannotatedFunctions = false
reportMissingTypeStubs = "none"
reportMissingImports = "error"
reportInvalidTypeForm = "none"
reportAssignmentType = "none"
reportWildcardImportFromLibrary = "warning"
reportAttributeAccessIssue = "warning"
reportImplicitOverride = "none"
reportUninitializedInstanceVariable = "warning"
reportAny = "none"
typeCheckingMode = "basic"
reportUnusedCallResult = "warning"
reportUnknownVariableType = "warning"
reportIgnoreCommentWithoutRule = "warning"
exclude = [
    "*.ipynb",
    "*.ipynb_checkpoints",
    "projects/*/explore/**/*",
    "projects/*/scratch/**/*",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
ignore = [
    "projects/*/explore/**/*",
    "projects/*/scratch/**/*",
    "notebooks/",
    "dev_tools/",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true
docstring-code-format = true
docstring-code-line-length = 80

[tool.pycodestyle]
ignore-overlong-task-comments = true
max-line-length = 100

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["I", "E", "F", "B", "N"]
fixable = ["ALL"]
unfixable = []
preview = true
ignore = [
    "E731", # lambda-assignment
    "E722", # bare-except
    "N999", # invalid-module-name
    "N802", # invalid-function-name
]
extend-select = [
    "PLC2401", # non-ascii-name
    "W291",    # trailing-whitespace
    "PLE0101", # return-in-init
    "F706",    # return-outside-function
    "F704",    # yield-outside-function
]
