[project]
name = "datastream-platform"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
dependencies = [
    "google-genai>=1.56.0",
    "mcp>=1.25.0",
    "molabel>=0.1.5",
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "databricks-sdk>=0.56.0",
    "databricks-bundles==0.257.0",
    "pytest",
    "ruff",
    "pip>=25.0.1",
    "una>=0.6.1",
    "marimo>=0.13.15",
    "uv-dynamic-versioning>=0.8.2",
    "databricks-connect~=16.4.1",
    "databricks-labs-dqx>=0.6.0",
    "databricks-labs-pytester>=0.7.2",
    "pyarrow>=22.0.0",
    "ty>=0.0.5",
]
[tool.una]
namespace = "dataplatform"

[tool.uv.workspace]
members = ["libs/*", "packages/*"]

[tool.ruff]
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb",
    "typings/*",
    "__builtins__.pyi",
    "*.ipynb",
    "*.ipynb_checkpoints",
    "projects/*/explore/**/*",
    "projects/*/scratch/**/*",
    "notebooks/*",
]
fix = true
show-fixes = true
line-length = 88
indent-width = 4


[tool.pyright]
allowedUntypedLibraries = ["fastcore", "pyspark", "mlflow"]
analyzeUnannotatedFunctions = false
reportMissingTypeStubs = "none"
reportMissingImports = "error"
reportInvalidTypeForm = "none"
reportAssignmentType = "none"
reportWildcardImportFromLibrary = "warning"
reportAttributeAccessIssue = "warning"
reportImplicitOverride = "none"
reportUninitializedInstanceVariable = "warning"
reportAny = "none"
typeCheckingMode = "basic"
reportUnusedCallResult = "warning"
reportUnknownVariableType = "warning"
reportIgnoreCommentWithoutRule = "warning"
exclude = [
    "*.ipynb",
    "*.ipynb_checkpoints",
    "projects/*/explore/**/*",
    "projects/*/scratch/**/*",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
ignore = [
    "projects/*/explore/**/*",
    "projects/*/scratch/**/*",
    "notebooks/",
    "dev_tools/",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["I", "E", "F", "B", "N"]
fixable = ["ALL"]
unfixable = []
preview = true
ignore = [
    "E731", # lambda-assignment
    "E722", # bare-except
    "N999", # invalid-module-name
    "N802", # invalid-function-name
]
extend-select = [
    "PLC2401", # non-ascii-name
    "W291",    # trailing-whitespace
    "PLE0101", # return-in-init
    "F706",    # return-outside-function
    "F704",    # yield-outside-function
]

[tool.ruff.lint.isort]
known-first-party = ["dataplatform"]

[tool.pytest.ini_options]
pythonpath = ["libs/*", "packages/*", "platform/*", "apps/*"]
testpaths = ["libs/*", "packages/*", "platform/*"]
addopts = ""

[tool.ty.environment]
python = " ./.venv/bin/python"
python-version = "3.13.11"
[tool.ty.rules]
unused-ignore-comment = "warn"
