[project]
name = "unity-orm"
version = "0.1.0"
description = "ORM creator and migration tools for Databricks Unity Catalog"
readme = "README.md"
authors = [{ name = "Javier Gonzalez", email = "javiergonzalez7@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "databricks-sqlalchemy~=2.0.5",
    "sqlalchemy~=2.0.0",
    "click~=8.1.7",
    "typing-extensions~=4.9.0",
    "databricks-sql-connector~=4.0.0",
    "inquirer~=3.4.0",
    "sqlacodegen~=3.0.0",
]
license = { file = "../../LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
unity-orm = "unity_orm.cli:main"

[dependency-groups]
dev = ["basedpyright >= 1.23.1", "pytest >= 8.3.4", "ruff >= 0.9.9"]
