[project]
name = "interfaces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jcompte", email = "jcompte@inspirato.com" }
]
requires-python = ">=3.13, <4"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
