[project]
name = "unity-catalog"
version = "0.1.0"
description = "Unity Catalog Library for a Data Platform"
authors = []
requires-python = "~=3.11"
dynamic = ["una"]
dependencies = [
    "databricks-sqlalchemy>=2.0.5",
    "fastcore>=1.8.1",
    "httpx>=0.28.1",
    "unitycatalog-client>=0.2.1",
]

[build-system]
requires = ["hatchling", "hatch-una>=0.5.1"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright", "pytest", "ruff"]
[tool.basedpyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
[tool.uv.sources]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]
