[project]
name = "cursor_eval"
version = "0.0.0"
description = "cursor_eval"
authors = []
requires-python = ">=3.12"
dynamic = ["una"]                                                  # needed for hatch-una metadata hook to work
dependencies = [
    "transformation",
    "client",
    "core",
    "cursor_eval",
    "mlflow[databricks]>=3.8.0",
    "emoji>=2.15.0",
    "litellm>=1.75.9",
]

[dependency-groups]
dev = [
    "client",
    "core",
    "transformation",
    "databricks-connect",
    "nbformat",
    "pre-commit",
    "polars",
    "pytest",
    "ruff",
    "una",
    "ipykernel",
]

[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]

[tool.uv.sources]
client = { workspace = true }
core = { workspace = true }
transformation = { workspace = true }
